apps/gitea/migrate.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: migrate
  name: migrate
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: migrate
  serviceName: migrate
  template:
    metadata:
      labels:
        app: migrate
    spec:
      containers:
      - image: docker.io/alpine:latest
        name: shell
        command: [ "/bin/sh", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
        volumeMounts:
          - name: source
            mountPath: /source
          - name: dest
            mountPath: /dest
      volumes:
        - name: source
          persistentVolumeClaim:
            claimName: gitea-zfs-dr
        - name: dest
          persistentVolumeClaim:
            claimName: gitea-data-ceph
