apps/gitea/gitea.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-web
  namespace: gitea
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
  - host: gitea.ugard.mywire.org
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: gitea-web
              port:
                number: 80
  tls:
  - hosts:
    - gitea.ugard.mywire.org
    secretName: tls-gitea-ingress-http
